<resources>
  <string name="app_name">Muzei Instagram Plug-In</string>
  <string name="source_name">Instagram</string>
  <string name="source_description">Your Instagram photos.</string>
  <string name="authorize_account">Authorize Account</string>
  <string name="unable_to_authorize_account">Unable to authorize account.</string>
  <string name="remove_account">Remove Account</string>
  <string name="my_photos">My Photos</string>
  <string name="my_feed">My Feed</string>
  <string name="photos_to_use">Photos to display</string>
  <string name="action_rotate_interval">Change interval</string>
  <string name="liked_photos">Liked Photos</string>
  <string name="popular_photos">Popular Photos</string>
</resources>
