<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/default_margin"
    android:gravity="center_vertical">

  <LinearLayout
      android:id="@+id/settings_layout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:layout_marginBottom="32dp"
      android:visibility="gone">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/photos_to_use"
        style="@style/Theme.Muzei.Header"/>

    <RadioGroup
        android:id="@+id/photos_to_display_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

      <RadioButton
          android:id="@+id/my_photos_radio_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/my_photos"/>

      <RadioButton
          android:id="@+id/my_feed_radio_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/my_feed"/>
      
      <RadioButton
          android:id="@+id/liked_photos_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/liked_photos"/>

      <RadioButton
          android:id="@+id/popular_photos_button"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/popular_photos"/>

    </RadioGroup>

  </LinearLayout>

  <Button
      android:id="@+id/authorize_account_button"
      style="@style/SettingsButton"
      android:visibility="gone"
      android:text="@string/authorize_account"/>

  <Button
      android:id="@+id/remove_account_button"
      style="@style/SettingsButton"
      android:visibility="gone"
      android:text="@string/remove_account"/>

</LinearLayout>